Fix tests and pep8
The project was initially imported in a broken state.

Change-Id: I2aa61e71dc8fc97636ec02a293c1cec609126c8b

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,8 @@
 # This file is managed centrally by release-tools and should not be modified
 # within individual charm repos.
 [tox]
+envlist = pep8,py27,py35
 skipsdist = True
-envlist = pep8,py34,py35
 skip_missing_interpreters = True
 
 [testenv]
@@ -51,5 +51,5 @@ commands = flake8 {posargs} src unit_tests
 commands = {posargs}
 
 [flake8]
-# E402 ignore necessary for path append before sys module import in actions
-ignore = E402
+ignore = E402,E226
+exclude = */charmhelpers
