Correctly upgrade package and refresh config
Currently, when the charm is upgraded, the package and configs are kept
at their old versions, despite users passing new resources.

This commit ensures the package and configs are modified when calling
upgrade-charm.

Change-Id: I3996082c19d4ff867ba43e64a155b610ba68af96

--- a/src/layer.yaml
+++ b/src/layer.yaml
@@ -1,4 +1,4 @@
-includes: ['layer:openstack', 'interface:neutron-plugin-api-subordinate']
+includes: ['layer:openstack', 'interface:neutron-plugin-api-subordinate', 'interface:juju-info']
 options:
   basic:
     use_venv: True
