--- a/tox.ini
+++ b/tox.ini
@@ -2,38 +2,27 @@
 # This file is managed centrally by release-tools and should not be modified
 # within individual charm repos.
 [tox]
-envlist = pep8,py27,py35
 skipsdist = True
-skip_missing_interpreters = True
+envlist = pep8,py3
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
          PYTHONHASHSEED=0
          TERM=linux
-         LAYER_PATH={toxinidir}/layers
-         INTERFACE_PATH={toxinidir}/interfaces
          JUJU_REPOSITORY={toxinidir}/build
-passenv = http_proxy https_proxy
+passenv = http_proxy https_proxy INTERFACE_PATH LAYER_PATH
 install_command =
   pip install {opts} {packages}
 deps =
     -r{toxinidir}/requirements.txt
 
 [testenv:build]
-basepython = python2.7
+basepython = python3
 commands =
     charm-build --log-level DEBUG -o {toxinidir}/build src {posargs}
 
-[testenv:py27]
-basepython = python2.7
-# Reactive source charms are Python3-only, but a py27 unit test target
-# is required by OpenStack Governance.  Remove this shim as soon as
-# permitted.  http://governance.openstack.org/reference/cti/python_cti.html
-whitelist_externals = true
-commands = true
-
-[testenv:py34]
-basepython = python3.4
+[testenv:py3]
+basepython = python3
 deps = -r{toxinidir}/test-requirements.txt
 commands = ostestr {posargs}
 
@@ -42,8 +31,13 @@ basepython = python3.5
 deps = -r{toxinidir}/test-requirements.txt
 commands = ostestr {posargs}
 
+[testenv:py36]
+basepython = python3.6
+deps = -r{toxinidir}/test-requirements.txt
+commands = ostestr {posargs}
+
 [testenv:pep8]
-basepython = python3.5
+basepython = python3
 deps = -r{toxinidir}/test-requirements.txt
 commands = flake8 {posargs} src unit_tests
 
@@ -52,5 +46,5 @@ basepython = python3
 commands = {posargs}
 
 [flake8]
-ignore = E402,E226
-exclude = */charmhelpers
+# E402 ignore necessary for path append before sys module import in actions
+ignore = E402
