--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 # This file is managed centrally by release-tools and should not be modified
 # within individual charm repos.
 [tox]
-envlist = pep8,py27,py35
+envlist = pep8,py27,py37
 skipsdist = True
 skip_missing_interpreters = True
 
@@ -39,6 +39,16 @@ commands = ostestr {posargs}
 
 [testenv:py35]
 basepython = python3.5
+deps = -r{toxinidir}/test-requirements.txt
+commands = ostestr {posargs}
+
+[testenv:py36]
+basepython = python3.6
+deps = -r{toxinidir}/test-requirements.txt
+commands = ostestr {posargs}
+
+[testenv:py37]
+basepython = python3.7
 deps = -r{toxinidir}/test-requirements.txt
 commands = ostestr {posargs}
 
