--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,10 @@
 [tox]
 envlist = pep8,py27,py35
 skipsdist = True
-skip_missing_interpreters = True
+# NOTE(beisner): Avoid build/test env pollution by not enabling sitepackages.
+sitepackages = False
+# NOTE(beisner): Avoid false positives by not skipping missing interpreters.
+skip_missing_interpreters = False
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
@@ -43,7 +46,7 @@ deps = -r{toxinidir}/test-requirements.txt
 commands = ostestr {posargs}
 
 [testenv:pep8]
-basepython = python3.5
+basepython = python3
 deps = -r{toxinidir}/test-requirements.txt
 commands = flake8 {posargs} src unit_tests
 
