Get tox targets working again
This was the minimum required to get tox targets working again.

Change-Id: Ib74c2c872debc274c509a770e07b861c2ba3c2ce

--- a/src/layer.yaml
+++ b/src/layer.yaml
@@ -1,4 +1,5 @@
 includes: ['layer:openstack', 'interface:neutron-plugin-api-subordinate']
+repo: 'https://opendev.org/openstack/charm-neutron-api-genericswitch'
 options:
   basic:
     use_venv: True
