--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 # This file is managed centrally by release-tools and should not be modified
 # within individual charm repos.
 [tox]
-envlist = pep8,py27,py35
+envlist = pep8,py35
 skipsdist = True
 skip_missing_interpreters = True
 
@@ -24,14 +24,6 @@ basepython = python2.7
 commands =
     charm-build --log-level DEBUG -o {toxinidir}/build src {posargs}
 
-[testenv:py27]
-basepython = python2.7
-# Reactive source charms are Python3-only, but a py27 unit test target
-# is required by OpenStack Governance.  Remove this shim as soon as
-# permitted.  http://governance.openstack.org/reference/cti/python_cti.html
-whitelist_externals = true
-commands = true
-
 [testenv:py34]
 basepython = python3.4
 deps = -r{toxinidir}/test-requirements.txt
@@ -43,7 +35,7 @@ deps = -r{toxinidir}/test-requirements.txt
 commands = ostestr {posargs}
 
 [testenv:pep8]
-basepython = python3.5
+basepython = python3
 deps = -r{toxinidir}/test-requirements.txt
 commands = flake8 {posargs} src unit_tests
 
