--- a/src/tox.ini
+++ b/src/tox.ini
@@ -13,10 +13,10 @@ whitelist_externals = juju
 passenv = HOME TERM AMULET_* CS_API_*
 deps = -r{toxinidir}/test-requirements.txt
 install_command =
-  pip install --allow-unverified python-apt {opts} {packages}
+  pip install {opts} {packages}
 
 [testenv:pep8]
-basepython = python2.7
+basepython = python3
 commands = charm-proof
 
 [testenv:func27-noop]
