Get tox targets working again
This was the minimum required to get tox targets working again.

Change-Id: Ib74c2c872debc274c509a770e07b861c2ba3c2ce

--- a/src/metadata.yaml
+++ b/src/metadata.yaml
@@ -18,6 +18,7 @@ tags:
   - openstack
 series:
   - xenial
+  - bionic
 provides:
   neutron-plugin-api-subordinate:
     interface: neutron-plugin-api-subordinate
